feat: feat: Improve statistical charts and optimize page navigation.
